<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="UserNameLabel">UserName</string>
    <string name="submit">Submit</string>
    <string name="username">Please Enter Your Username</string>
    <string name="password">Password</string>
    <string name="enterpassword">Please Enter Your Password</string>
    <string name="confirmpassword">Confirm</string>
    <string name="confirmpassword2">Please Confirm your password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Welcome">welcome</string>
</resources>
